@@ -14,6 +14,7 @@ CHANGES INTRODUCED IN XINS 0.206:
   - Reabilitated the ServletRequestPropertyReader removed in the previous
     version as it's now used by the server framework.
   - Removed unused import statements.
+  - Removed deprecated method controlTimeOut(Thread, TargetDescriptor).
 
 * XINS/Java Client Framework:
   - Removed unused import statements.
